--- a/backends/backend-glfw/proj/backend-glfw.vcxproj
+++ b/backends/backend-glfw/proj/backend-glfw.vcxproj
@@ -79,7 +79,7 @@
     <ClCompile Include="..\src\WindowsAudio.cpp" />
     <ClCompile Include="..\src\WindowsAudioDevice.cpp" />
     <ClCompile Include="..\src\GlfwInput.cpp" />
-    <ClCompile Include="..\src\WindowsTimer.cpp" />
+    <ClCompile Include="..\src\GlfwTimer.cpp" />
     <ClCompile Include="..\src\GlfwApplication.cpp" />
     <ClCompile Include="..\src\WoglFileHandleStream.cpp" />
     <ClCompile Include="..\src\WoglFiles.cpp" />
@@ -93,7 +93,7 @@
     <ClInclude Include="..\exp\WindowsAudio.h" />
     <ClInclude Include="..\exp\WindowsAudioDevice.h" />
     <ClInclude Include="..\exp\GlfwInput.h" />
-    <ClInclude Include="..\exp\WindowsTimer.h" />
+    <ClInclude Include="..\exp\GlfwTimer.h" />
     <ClInclude Include="..\exp\GlfwApplication.h" />
     <ClInclude Include="..\exp\WoglFileHandleStream.h" />
     <ClInclude Include="..\exp\WoglFiles.h" />
