--- a/backends/backend-glfw/proj/backend-glfw.vcxproj
+++ b/backends/backend-glfw/proj/backend-glfw.vcxproj
@@ -72,6 +72,10 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\GlfwMutex.cpp" />
+    <ClCompile Include="..\src\GlfwThread.cpp" />
+    <ClCompile Include="..\src\GlfwThreading.cpp" />
+    <ClCompile Include="..\src\GlfwWaitCondition.cpp" />
     <ClCompile Include="..\src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -90,6 +94,10 @@
     <ClCompile Include="..\src\GlfwGraphics.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\exp\GlfwMutex.h" />
+    <ClInclude Include="..\exp\GlfwThread.h" />
+    <ClInclude Include="..\exp\GlfwThreading.h" />
+    <ClInclude Include="..\exp\GlfwWaitCondition.h" />
     <ClInclude Include="..\exp\WindowsAudio.h" />
     <ClInclude Include="..\exp\WindowsAudioDevice.h" />
     <ClInclude Include="..\exp\GlfwInput.h" />
