--- a/demos/superjumper/proj/superjumper.vcxproj
+++ b/demos/superjumper/proj/superjumper.vcxproj
@@ -114,13 +114,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\gdx-backend-wogl\exp</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\gdx-backend-wogl\exp;..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>gdx.lib;gdx-backend-wogl.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;GLFW.lib;gdx.lib;backend-glfw.lib;gdx-backend-wogl.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);..\..\..\backends\backend-glfw\extern\glfw-2.7.3\support\msvc100\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <CustomBuildStep>
       <Command>xcopy /i /y ..\data $(OutDir)\data</Command>
@@ -137,7 +137,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\gdx-backend-wogl\exp</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\gdx-backend-wogl\exp;..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -145,7 +145,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>gdx.lib;gdx-backend-wogl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;GLFW.lib;gdx.lib;backend-glfw.lib;gdx-backend-wogl.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
