--- a/gdx/proj/gdx.vcxproj.filters
+++ b/gdx/proj/gdx.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClCompile Include="..\src\StringUtils.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\ImmediateModeRenderer10.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\etc1_utils.h">
@@ -627,6 +630,12 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\include\WaitCondition.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ImmediateModeRenderer.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ImmediateModeRenderer10.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
