--- a/gdx/proj/gdx.vcxproj
+++ b/gdx/proj/gdx.vcxproj
@@ -182,6 +182,7 @@
   <ItemGroup>
     <ClInclude Include="..\include\AccelerateDecelerateInterpolator.h" />
     <ClInclude Include="..\include\AccelerateInterpolator.h" />
+    <ClInclude Include="..\include\Align.h" />
     <ClInclude Include="..\include\Animation.h" />
     <ClInclude Include="..\include\AnticipateInterpolator.h" />
     <ClInclude Include="..\include\BitmapFont.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="..\include\RotateBy.h" />
     <ClInclude Include="..\include\RotateTo.h" />
     <ClInclude Include="..\include\ScaleTo.h" />
+    <ClInclude Include="..\include\ScissorStack.h" />
     <ClInclude Include="..\include\Sequence.h" />
     <ClInclude Include="..\include\AnimationAction.h" />
     <ClInclude Include="..\include\CompositeAction.h" />
