--- a/gdx/proj/gdx.vcxproj.filters
+++ b/gdx/proj/gdx.vcxproj.filters
@@ -641,6 +641,12 @@
     <ClInclude Include="..\include\ObjLoader.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Align.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ScissorStack.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\ReadMe.txt" />
