--- a/backends/backend-glfw/proj/backend-glfw.vcxproj.filters
+++ b/backends/backend-glfw/proj/backend-glfw.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClCompile Include="..\src\WoglFileHandleStream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\WoglFiles.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\GlfwApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -66,6 +63,9 @@
     <ClCompile Include="..\extern\glew.c">
       <Filter>extern</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\WindowsFiles.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\incl\stdafx.h">
@@ -81,18 +81,6 @@
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="..\exp\WoglFileHandleStream.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\exp\WoglFiles.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\exp\WoglGL10.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\exp\WoglGL11.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\exp\WoglGL20.h">
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="..\exp\WoglGLCommon.h">
@@ -120,6 +108,9 @@
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="..\exp\GlfwThreading.h">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\exp\WindowsFiles.h">
       <Filter>Include</Filter>
     </ClInclude>
   </ItemGroup>
