--- a/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj.filters
+++ b/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClInclude Include="..\exp\WoglApplication.h">
       <Filter>Exported Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\exp\WoglFiles.h">
-      <Filter>Exported Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\exp\WoglGraphics.h">
       <Filter>Exported Header Files</Filter>
     </ClInclude>
@@ -69,6 +66,9 @@
     <ClInclude Include="..\exp\WindowsAudioDevice.h">
       <Filter>Exported Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\exp\WindowsFiles.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\gdx-backend-wogl.cpp">
@@ -78,9 +78,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\WoglApplication.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\WoglFiles.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\WoglGraphics.cpp">
@@ -120,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\WindowsAudioDevice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\WindowsFiles.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
