ShaderProgram debug (started to work) unreferenced backend-wogl (obsolete)

--- a/demos/Metagun/proj/Metagun.vcxproj
+++ b/demos/Metagun/proj/Metagun.vcxproj
@@ -50,12 +50,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\gdx-backend-wogl\exp;..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>gdx.lib;backend-glfw.lib;gdx-backend-wogl.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gdx.lib;backend-glfw.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -68,7 +68,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\gdx-backend-wogl\exp;..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\res;..\incl;..\..\..\gdx\include;..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -76,7 +76,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>gdx.lib;backend-glfw.lib;gdx-backend-wogl.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gdx.lib;backend-glfw.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
